Agrego logs, observabilidad, y manejo de errores