@@ -8,15 +8,15 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @RequestMapping("/categorias")
 @CrossOrigin(origins= "http://localhost:3000")
@@ -48,12 +48,30 @@ public class CategoriaController {
                     description = "no encontrado"
             )
     })
-    public List<CategoriaDTO> obtenerColecciones(){
+    public ResponseEntity<?> obtenerColecciones(){
 
-        return this.categoriaRepository.findAll()
-                .stream()
-                .map(categoria -> new CategoriaDTO(categoria.getNombre()))
-                .collect(Collectors.toList());
+        try {
+
+            List<CategoriaDTO> categorias =
+                    categoriaRepository.findAll()
+                            .stream()
+                            .map(c -> new CategoriaDTO(c.getNombre()))
+                            .toList();
+
+            if (categorias.isEmpty()) {
+                log.info("No se encontraron categorías");
+            }
+
+            return ResponseEntity.ok(categorias);
+
+
+        } catch (Exception e) {
+
+
+            log.error("Error consultando categorías", e);
+            return ResponseEntity.status(500).body("Error interno del servidor");
+        }
 
     }
+
 }
